--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/nhsuk/register-with-a-gp-prototypes#readme",
   "dependencies": {
+    "basic-auth": "^1.0.4",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "nunjucks": "^2.5.2"
+    "nunjucks": "^2.5.2",
+    "portscanner": "^1.0.0",
+    "prompt": "^1.0.0",
+    "serve-favicon": "^2.3.0"
   }
 }
