--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "basic-auth": "^1.0.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "grunt": "^1.0.1",
     "nunjucks": "^2.5.2",
     "portscanner": "^1.0.0",
     "prompt": "^1.0.0",
