--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
     "nunjucks": "^2.5.2",
     "portscanner": "^1.0.0",
     "prompt": "^1.0.0",
