--- a/package.json
+++ b/package.json
@@ -17,18 +17,24 @@
   },
   "homepage": "https://github.com/nhsuk/register-with-a-gp-prototypes#readme",
   "dependencies": {
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "basic-auth": "^1.0.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "express-validator": "^2.20.10",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "grunt-cli": "^1.2.0",
     "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-nodemon": "^0.4.2",
     "grunt-sass": "^1.2.1",
     "javascript-natural-sort": "^0.7.1",
+    "load-grunt-tasks": "^3.5.2",
     "nunjucks": "^2.5.2",
     "nunjucks-date-filter": "^0.1.1",
     "portscanner": "^1.0.0",
